--- a/Index.html
+++ b/Index.html
@@ -14,19 +14,19 @@
 </div>
 -->
 
-<div type="group" class="sdpi-item" id="messagegroup">
-    <div class="sdpi-item-label">Choose your sample</div>
-    <div class="sdpi-item-group" id="messagegroup_items">
-        <div type="select" class="sdpi-item" id="messagegroup_account">
-            <div class="sdpi-item-label">Sample</div>
-            <select class="sdpi-item-value select">
-                <option value="kick.wav">Kick</option>
-                <option value="snare.wav">Snare</option>
-                <option value="clap.wav">Clap</option>
-            </select>
-        </div>
-    </div>
+<div class="sdpi-item" id="select_single">
+    <div class="sdpi-item-label">Select Sample</div>
+    <select class="sdpi-item-value select" id="myselect">
+        <option value="kick.wav">Kick</option>
+        <option value="snare.wav">Snare</option>
+        <option value="clap.wav">Clap</option>
+    </select>
 </div>
+
+
+
+
+<script src="Index.js"> </script>
 
 </body>
 
