Added new samples

--- a/Index.html
+++ b/Index.html
@@ -20,6 +20,7 @@
         <option value="kick.wav">Kick</option>
         <option value="snare.wav">Snare</option>
         <option value="clap.wav">Clap</option>
+        <option value="airhorn.mp3">Airhorn</option>
     </select>
 </div>
 
